# Nimax-Cocktails

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: menu_button_dark.xml  rain_drop.xml
app/src/main/res/drawable-v24/: button_accent.xml  button_dark.xml  drag_handle.xml  ic_launcher_background.xml  icon_vibration.xml  menu_button.xml  menu_button_accent.xml
app/src/main/res/layout/: activity_drinker_edit.xml  activity_drinkers.xml  activity_main.xml  activity_menu.xml  activity_mixing.xml  activity_recipe_edit.xml  activity_recipes.xml  activity_settings.xml  activity_setup.xml  activity_start.xml  adapter_amount.xml  adapter_big_list.xml  adapter_drinker_edit.xml  adapter_drinkers.xml  adapter_drinks_carousel.xml  adapter_mix.xml  adapter_recipe_edit.xml  adapter_recipes.xml  adapter_recipes_list.xml  adapter_small_list.xml  amount_spinner_item.xml  carousel_drink_item.xml  dialog_add.xml  dialog_confirm.xml  dialog_mix.xml  dialog_saving.xml  menu_button.xml  settings_button.xml
app/src/main/res/raw/: recipes  recipes.json
app/src/main/res/values-de/: strings.xml
arduino/: arduino_cocktail_automat.ino
arduino/arduino_cocktail_automat/: arduino_cocktail_automat.ino
arduino_cocktail_automat/: arduino_cocktail_automat.ino  bluetooth_interface.h  eeprom_handler.h  motor_handler.h  shift_register.h  shift_registry.h
firmware/: .env.example  README.md  pyproject.toml
firmware/scripts/: deploy.py
firmware/src/: main.py  test.py
gradle/wrapper/: gradle-wrapper.properties
(+73 files in other folders)
