[tool.poetry]
name = "firmware"
version = "0.1.0"
description = "Firmware for the Nimax cocktail machine."
authors = ["Tim Niederer <niederer.tim@gmail.com>", "Hannes Ritzler <h.ritzler@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
