[tool.poetry]
name = "firmware"
version = "0.1.0"
description = "Firmware for the Nimax cocktail machine."
authors = ["Tim Niederer <niederer.tim@gmail.com>", "Hannes Ritzler <h.ritzler@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.11.11"

[tool.poetry.scripts]
firmware = "src.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
