[tool.poetry]
name = "firmware"
version = "0.1.0"
description = "Firmware for the Nimax cocktail machine."
authors = ["Tim Niederer <niederer.tim@gmail.com>", "Hannes Ritzler <h.ritzler@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts" },
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.11.*"
paramiko = "3.5.0"
python-dotenv = "1.0.1"

[tool.poetry.scripts]
ssh-firmware = "scripts.deploy:start"
firmware = "src.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
